--- a/contacts.html
+++ b/contacts.html
@@ -84,7 +84,7 @@
 							</div>
 							<div class="col-6 col-md-12">
 								<div class="font-2 fw_7 mt-md-4 mb-1 mb-sm-3">Вопросы и предложения:</div>
-								<div class="fw_3"><a href="mailto:Status@mail.ru">Status@mail.ru</a></div>
+								<div class="fw_3"><a href="mailto:Salon-status.online@yandex.ru">Salon-status.online@yandex.ru</a></div>
 							</div>
 							<div class="col-6 col-md-12">
 								<div class="font-2 fw_7 mt-3 mt-sm-4 mb-1 mb-sm-3">Адрес:</div>
