--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@
 			<div class="container">
 				<h1 class="inner">Команда</h1>
 				<div class="row row-cols-2 row-cols-sm-3 row-cols-lg-4 gx-0 gy-4">
-					<div>
+					<!-- <div>
 						<div class="master">
 							<img src="img/sample.jpg">
 							<div class="p-2 p-md-4">
@@ -134,7 +134,7 @@
 								</button>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div>
 						<div class="master">
 							<img src="img/team/natalia.jpg">
