--- a/index.html
+++ b/index.html
@@ -57,7 +57,21 @@
 		</div>
 	</header>
 
-	<section id="sec-1" class="mb_4">
+	<section id="sec-3" class="mb_4">
+		<div class="container position-relative py-4 py-md-5 h-100">
+			<div class="row h-100">
+				<div class="col-md-8 d-flex flex-column justify-content-center">
+					<div>
+						<h1>Окрашивание дома эксклюзивным коктейлем испанской марки Hipertin</h1>
+						<div class="text-center text-md-start f_12 font-2 mb-4 mb-md-5">Наши стилисты подберут Ваш индивидуальный оттенок онлайн</div>
+						<button type="button" data-bs-toggle="modal" data-bs-target="#quiz" class="btn_main btn_1 mx-auto ms-md-0 me-md-auto mb-4 mb-md-5"><span class="f_09">Подобрать оттенок</span></button>
+					</div>
+				</div>
+			</div>
+			<div class="remark">*Хотим отметить, что дома вы можете покраситься самостоятельно только в однотонный цвет.</div>
+		</div>
+	</section>
+	<!-- <section id="sec-1" class="mb_4">
 		<img src="img/bg/bg1.jpg" alt="" class="sec-1-bg">
 		<div class="container position-relative">
 			<div class="row align-items-center">
@@ -68,7 +82,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section id="sec-2" class="mb_4">
 		<div class="container">
@@ -129,20 +143,7 @@
 		</div>
 	</section>
 
-	<section id="sec-3" class="mb_4">
-		<div class="container position-relative py-4 py-md-5 h-100">
-			<div class="row h-100">
-				<div class="col-md-8 d-flex flex-column justify-content-center">
-					<div>
-						<h3>Окрашивание дома с индивидуальным коктейлем!</h3>
-						<div class="text-center text-md-start f_12 font-2 mb-4 mb-md-5">Подберите Ваш индивидуальный оттенок с помощью профессионалов!</div>
-						<button type="button" data-bs-toggle="modal" data-bs-target="#quiz" class="btn_main btn_1 mx-auto ms-md-0 me-md-auto mb-4 mb-md-5"><span class="f_09">Подобрать оттенок</span></button>
-					</div>
-				</div>
-			</div>
-			<div class="remark">*Хотим отметить, что дома вы можете покраситься самостоятельно только в однотонный цвет.</div>
-		</div>
-	</section>
+	
 
 	<section id="sec-4" class="mb_4">
 		<div class="container">
