--- a/personal-account-1.html
+++ b/personal-account-1.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Status - Личный кабинет</title>
+	<title>Status - Личный кабинет - Профиль</title>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -40,19 +40,19 @@
 						</ul>
 					</nav>
 				</div>
-				<!-- <div class="col-4 col-sm-3 col-md-2 d-flex justify-content-center">
-					<button type="button" class="btn-icon">
+				<div class="col-4 col-sm-3 col-md-2 d-flex justify-content-center">
+					<a href="personal-account-1.html" class="btn-icon">
 						<svg width="40" height="38" viewBox="0 0 40 38" xmlns="http://www.w3.org/2000/svg">
 							<path d="M19.9998 9.35485C21.8332 9.35485 23.3332 10.7581 23.3332 12.4731C23.3332 14.1882 21.8332 15.5914 19.9998 15.5914C18.1665 15.5914 16.6665 14.1882 16.6665 12.4731C16.6665 10.7581 18.1665 9.35485 19.9998 9.35485ZM19.9998 23.3871C24.4998 23.3871 29.6665 25.3984 29.9998 26.5054V28.0645H9.99984V26.521C10.3332 25.3984 15.4998 23.3871 19.9998 23.3871ZM19.9998 6.23657C16.3165 6.23657 13.3332 9.02743 13.3332 12.4731C13.3332 15.9188 16.3165 18.7097 19.9998 18.7097C23.6832 18.7097 26.6665 15.9188 26.6665 12.4731C26.6665 9.02743 23.6832 6.23657 19.9998 6.23657ZM19.9998 20.2688C15.5498 20.2688 6.6665 22.3581 6.6665 26.5054V31.1828H33.3332V26.5054C33.3332 22.3581 24.4498 20.2688 19.9998 20.2688Z"/>
 						</svg>
-					</button>
-					<button type="button" class="btn-icon ms-2 ms-md-4">
+					</a>
+					<a href="shopping-cart.html" class="btn-icon ms-2 ms-md-4">
 						<svg width="40" height="38" viewBox="0 0 40 38" xmlns="http://www.w3.org/2000/svg">
 							<path d="M27.5771 20.2688C28.8271 20.2688 29.9271 19.6296 30.4938 18.6629L36.4605 8.54409C37.0771 7.51506 36.2771 6.23657 35.0105 6.23657H10.3438L8.77715 3.11829H3.32715V6.23657H6.66048L12.6605 18.0704L10.4105 21.8747C9.19381 23.964 10.7938 26.5054 13.3271 26.5054H33.3271V23.3871H13.3271L15.1605 20.2688H27.5771ZM11.9271 9.35484H32.1771L27.5771 17.1505H15.8771L11.9271 9.35484ZM13.3271 28.0645C11.4938 28.0645 10.0105 29.4677 10.0105 31.1828C10.0105 32.8979 11.4938 34.3011 13.3271 34.3011C15.1605 34.3011 16.6605 32.8979 16.6605 31.1828C16.6605 29.4677 15.1605 28.0645 13.3271 28.0645ZM29.9938 28.0645C28.1605 28.0645 26.6771 29.4677 26.6771 31.1828C26.6771 32.8979 28.1605 34.3011 29.9938 34.3011C31.8271 34.3011 33.3271 32.8979 33.3271 31.1828C33.3271 29.4677 31.8271 28.0645 29.9938 28.0645Z"/>
 						</svg>
 						<div class="count">3</div>
-					</button>
-				</div> -->
+					</a>
+				</div>
 			</div>
 		</div>
 	</header>
@@ -68,16 +68,16 @@
 		</div>
 
 		<section id="sec-16" class="container">
-			<h1 class="inner">Профиль</h1>
+			<h1 class="inner mb-5">Профиль</h1>
 			<div class="row">
-				<div class="col-3">
+				<div class="d-none d-md-block col-3">
 					<nav>
 						<ul>
 							<li>
-								<a href="#" class="active">Профиль</a>
+								<a href="personal-account-1.html" class="active">Профиль</a>
 							</li>
 							<li>
-								<a href="#">Избранные товары</a>
+								<a href="personal-account-2.html">Избранные товары</a>
 							</li>
 							<li>
 								<a href="#">Мои заказы</a>
@@ -91,27 +91,102 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="col-9">
-					<div class="row align-items-center f_15 light-gray font-2">
-						<div class="col-3 mb-4">
-							<div>Имя:</div>
+				<div class="col-md-9">
+					<form action="" class="profile">
+						<div class="row align-items-center font-2 gx-2 gx-md-4 gy-3 gy-md-4 gy-lg-5">
+							<div class="col-4 col-xl-3">
+								<div class="f_14 light-gray">Имя:</div>
+							</div>
+							<div class="col-8 col-xl-7">
+								<input class="w-100 f_14" type="text" placeholder="Анастасия">
+							</div>
+							<div class="col-4 col-xl-3">
+								<div class="f_14 light-gray">Фамилия:</div>
+							</div>
+							<div class="col-8 col-xl-7">
+								<input class="w-100 f_14" type="text" placeholder="Смирнова">
+							</div>
+							<div class="col-4 col-xl-3">
+								<div class="f_14 light-gray">Пол:</div>
+							</div>
+							<div class="col-8 col-xl-7 d-flex align-items-center f_12">
+								<input type="radio" name="gender" value="female" id="female" class="me-1 me-md-2">
+								<label for="female" class="me-3 me-md-5">Женский</label>
+								<input type="radio" name="gender" value="male" id="male" class="me-1 me-md-2">
+								<label for="male">Мужской</label>
+							</div>
+							<div class="col-4 col-xl-3">
+								<div class="f_14 light-gray">Дата рождения:</div>
+							</div>
+							<div class="col-8 col-xl-7 d-flex align-items-center f_14">
+								<select class="inp-style">
+									<option value="1">1</option>
+									<option value="2">2</option>
+									<option value="3">3</option>
+									<option value="4">4</option>
+									<option value="5">5</option>
+									<option value="6">6</option>
+									<option value="7">7</option>
+									<option value="8">8</option>
+									<option value="9">9</option>
+									<option value="10">10</option>
+								</select>
+								<select class="inp-style ms-1 ms-sm-2 ms-lg-4">
+									<option value="января">января</option>
+									<option value="февраля">февраля</option>
+									<option value="марта">марта</option>
+									<option value="апреля">апреля</option>
+									<option value="мая">мая</option>
+									<option value="июня">июня</option>
+									<option value="июля">июля</option>
+									<option value="августа">августа</option>
+									<option value="сентября">сентября</option>
+									<option value="октября">октября</option>
+									<option value="ноября">ноября</option>
+									<option value="декабря">декабря</option>
+								</select>
+								<select class="inp-style ms-1 ms-sm-2 ms-lg-4">
+									<option value="1990">1990</option>
+									<option value="1991">1991</option>
+									<option value="1992">1992</option>
+									<option value="1993">1993</option>
+									<option value="1994">1994</option>
+									<option value="1995">1995</option>
+									<option value="1996">1996</option>
+									<option value="1997">1997</option>
+									<option value="1998">1998</option>
+									<option value="1999">1999</option>
+									<option value="2000">2000</option>
+									<option value="2001">2001</option>
+									<option value="2002">2002</option>
+									<option value="2003">2003</option>
+									<option value="2004">2004</option>
+									<option value="2005">2005</option>
+								</select>
+							</div>
+							<div class="col-4 col-xl-3">
+								<div class="f_14 light-gray">Телефон:</div>
+							</div>
+							<div class="col-8 col-xl-7">
+								<input class="w-100 f_14" type="text" placeholder="+7 (962) 123 56 89">
+							</div>
+							<div class="col-4 col-xl-3">
+								<div class="f_14 light-gray">Email:</div>
+							</div>
+							<div class="col-8 col-xl-7">
+								<input class="w-100 f_14" type="text" placeholder="Email@mail.com">
+							</div>
+							<div class="col-md-8 col-xl-7 offset-md-4 offset-xl-3 d-flex align-items-center f_12">
+								<input type="checkbox" name="gender" value="female" id="female" class="me-2">
+								<label for="female" class="flex-1 me-5">Получать уведомления о наших акциях</label>
+							</div>
+							<div class="col-md-8 col-xl-7 offset-md-4 offset-xl-3">
+								<button type="submit" class="btn_main btn_1 mx-auto mx-md-0">
+									<span class="f_09">Редактировать</span>
+								</button>
+							</div>
 						</div>
-						<div class="col-7 mb-4">
-							<input class="w-100" type="text" placeholder="Анастасия">
-						</div>
-						<div class="col-3">
-							<div>Фамилия:</div>
-						</div>
-						<div class="col-7">
-							<input class="w-100" type="text" placeholder="Смирнова">
-						</div>
-						<div class="col-3">
-							<div>Пол:</div>
-						</div>
-						<div class="col-7">
-							<input type="radio" name="gender" value="female">
-						</div>
-					</div>
+					</form>
 				</div>
 			</div>
 		</section>
